# azuredev-8b4a

./: .audit-ci.json  .gitignore  AGENTCORE_DEPLOYMENT_STATUS.md  AGENTS_FIXED.md  API_README.md  AZURE_AGENTCORE_SUMMARY.md  AZURE_AGENT_TOOLS_COMPLETE.md  B2C_BRANDING.md  B2C_SETUP.md  CLOUDFLARE_DNS_SETUP.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEV01_OMX_DELIVERABLES_HANDOFF.md  DOMAIN_MIGRATION.md  Dockerfile.rag  ENTERPRISE_AUTH_SETUP.md  ENTERPRISE_AUTH_TEST_RESULTS.md  FINAL_DEPLOYMENT_STATUS.md  FRONTEND_INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE.md  MAPLESAGE_NET_SETUP.md  MIGRATION-COMPLETE.md  MSAL_FIX_SUMMARY.md  README.md  WEB_DEPLOYMENT_COMPLETE.md  aks-deployment.yaml  app.py  azure-credentials.json  build-agents.sh  build-all-agents.sh  build-amd64-agents.sh  check-and-restart-agents.sh  check-rag-status.sh  complete-integration.html  deploy-agents-to-aks.sh  deploy-aks.sh  deploy-frontend-to-aks.sh  deploy-frontend.sh  deploy-full-k8s.sh  (+35 more)
.github/: ct.yaml
LogFiles/: __lastCheckTime.txt
azure-agentcore/: Dockerfile  agent_app.py  containerapp.yaml  k8s-deployment.yaml  k8s-simple.yaml  requirements.txt
azure-azins-frontend/: .gitignore  .vercel-cache-bust  .vercel-clear-cache  .vercel-force-deploy  .vercel-force-rebuild  .vercel-force-redeploy  .vercel-trigger  .vercelignore  Dockerfile  README.md  VERCEL_DEPLOYMENT.md  amplify_outputs.json  check-cognito-config.js  debug-auth.js  debug-cognito-flow.js  fix-final-redirects.sh  get_secrets.js  jest.setup.js  lambda_function.py  next.config.js  package-lock.json  package.json  pre_signup_trigger.py  rag-api.py  requirements-rag.txt  response.json  response2.json  test-api.js  test-client-creds.js  test-domains.js  tsconfig.json
azure-cyber-insurance/: README.md  deploy.sh
azure-docstream/: README.md
azure-fastapi/: Dockerfile  deploy.sh  docker-compose.yml  setup_search_indices.py  validate_config.py
azure-insurance-agentcore/: Dockerfile  README.md  agent-with-capabilities.py  deploy-full-stack.sh  deploy.bicep  deploy.sh  insurance_agent.py  migrate-all-kbs.sh  migrate-kb.sh  requirements.txt  setup-kb.sh  simple-deploy.sh
azure-policy-assistant/: README.md  deploy.sh
azure-policy-assistant-standalone/: README.md
azure-sageinsure-backend/: create-separate-app.sh  deploy-backend.sh  fix-failed.sh  rename-to-azins.sh  upload-frontend.sh
azure-sageinsure-complete/: deploy-all.sh
azure-underwriter-agent/: Dockerfile  README.md  deploy.py  k8s-deployment.yaml  requirements.txt  underwriter-agent-config.json  workbench-app.py
azure-underwriters-workbench/: Dockerfile  README.md  app.py  deploy.py  k8s-deployment.yaml  requirements.txt
azure_agent_tools/: __init__.py  browser.py  calculator.py
backend/: Dockerfile  FIXES.md  app.py  deploy.sh  main.py  quick_fix.py  real_app.py  requirements.txt  simple_keyvault_test.py  test_app.py  test_config.py  test_keyvault.py
crates/: README.md
crates/broker-operator/: Cargo.toml
crates/broker-operator/crds/: brokerruntime.yaml
crates/broker-operator/src/: lib.rs  main.rs
crates/broker-runtime/: Cargo.toml  Dockerfile
crates/broker-runtime/config/: kb.yaml  skills.yaml  tools.yaml
crates/broker-runtime/src/: main.rs
crates/claims-defender/: Cargo.toml
crates/claims-defender/src/: complaint.rs  evidence.rs  lib.rs  parser.rs
crates/domain/: Cargo.toml
crates/domain/src/: auth.rs  contracts.rs  error.rs  ids.rs  lib.rs
crates/infra/: Cargo.toml
crates/infra/src/: blob.rs  cache.rs  config.rs  db.rs  keyvault.rs  lib.rs  notifications.rs
crates/scamshield/: Cargo.toml
crates/scamshield/src/: analyzer.rs  lib.rs  phone.rs  types.rs
deployment-strategies/: README.md  rollback-automation.yaml  strategy-comparison.md
deployments/: active
docs/: aks-terraform-rust-migration.md  azure-ad-setup.md  ci-cd-authentication-fix.md  deployment-guide.md  health-checks-guide.md  keyvault-integration-guide.md  migration-checklist.md  monitoring-guide.md  security-compliance-guide.md  task-1-completion-summary.md  task-2-completion-summary.md  task-3.1-completion-summary.md  testing-guide.md  troubleshooting-runbook.md
frontend/: .dockerignore  .gitignore  AGENT_UPDATE_README.md  Dockerfile  README.md  VERCEL_DEPLOYMENT.md  debug-social-login.js  index.html  jest.config.js  next.config.js  next.config.ts  package-lock.json  package.json  payload.b64  server.mjs  tailwind.config.js  test-cognito.js  test_payload.json  tsconfig.json  vercel.json  vite.config.ts
frontend-update/: agent-functions.js  api-config.js  chat-component.jsx  chat.css
infra-rust/: Cargo.toml  README.md
k8s-manifests/: ingress.yaml  (+11 more)
(+729 files in other folders)
