[package]
name = "broker-operator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
k8s-openapi = { version = "0.23", features = ["v1_30"] }
kube = { version = "0.95", features = ["runtime", "derive", "client"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
