[package]
name    = "claims-defender"
version.workspace = true
edition.workspace = true

[dependencies]
domain       = { path = "../domain" }
infra        = { path = "../infra" }
policy-pulse = { path = "../policy-pulse" }

sqlx        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
regex       = "1"
reqwest     = { workspace = true }
