[package]
name    = "domain"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow      = { workspace = true }
serde       = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
validator   = { workspace = true }
