[package]
name    = "infra"
version.workspace = true
edition.workspace = true

[dependencies]
domain      = { path = "../domain" }
sqlx        = { workspace = true }
redis       = { workspace = true }
azure_security_keyvault = { workspace = true }
azure_storage_blobs     = { workspace = true }
azure_storage           = "0.20"
azure_core              = { workspace = true }
azure_identity          = "0.20"
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
envy        = { workspace = true }
reqwest     = { workspace = true }
