[package]
name    = "scamshield"
version.workspace = true
edition.workspace = true

[dependencies]
domain      = { path = "../domain" }
infra       = { path = "../infra" }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
reqwest     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
regex       = "1"
sqlx        = { workspace = true }
